--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
 <script type="text/javascript">
 	Cufon.replace('h1,h3', {fontFamily: 'Clarendon LT Std', hover:true})
 </script>
+    <style>
+        .logo_box img {
+            top: 47%;
+            position: relative;
+            left: 40%;
+        }
+    </style>
 </head>
 <body>
 <div id="shim"></div>
 <div id="content">
-	<div class="logo_box"><img src="/images/tr_logo.png" /></div>          
+	<div class="logo_box"><img src="~/images/tr_logo.png" /></div>          
 	<div class="main_box">
 		<h2>Our website is coming soon.<br/><span>In the mean time connect with us with the information below</span></h2>
 		
