--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <div id="shim"></div>
     <div id="content">
-        <div class="logo_box"><img src="~/images/tr_logo.png" /></div>
+        <div class="logo_box"><img src="/images/tr_logo.png" /></div>
         <div class="main_box">
             <h2>Our website is coming soon.<br /><span>In the mean time connect with us with the information below</span></h2>
 
